Unify on Streams.toList